# ai-dl-lightning

./: .env.docker  .env.minikube  .env.sample  .gitignore  .pre-commit-config.yaml  .rayignore  Dockerfile  Dockerfile_old  README copy.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-build-push-docker.yaml  ci-docker-build-push.yaml  train.yaml
examples/: mnist_example.json
notebooks/: explore_and_save_data.ipynb  test_load_local_shared_data.ipynb
src/: _utils.py  config.py  data.py  model.py  serve.py  serve_config.yaml  train.py  tune.py
src/_utils/: __init__.py  logging.py
src/serving/: __init__.py  config.py  schemas.py  serve.py  serve_config.yaml
src/training/: __init__.py  config.py  data.py  model.py  train.py
tests/: test_mnist_classifier.py
