[project]
name = "ai-dl-lightning"
version = "0.1.0"
description = "Fashion MNIST classification with Ray, MLflow, PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Minimal shared dependencies
    "mlflow>=3.2.0",
    "pydantic-settings>=2.12.0",
    "torch>=2.5.0",
    "torchvision>=0.24.0",
    "rich>=14.2.0",
    "dvc[s3]>=3.64.0",
    "lightning>=2.5.6",
    "numpy>=1.24.0",
    "torchmetrics>=1.8.2",
]

[project.optional-dependencies]
# Training-specific dependencies
training = [
    "ray[default,data,train,tune]>=2.48.0",
    # torchvision, numpy, torchmetrics moved to base
]

# Serving-specific dependencies
serving = [
    "fastapi>=0.116.1",
    "ray[serve,data]>=2.48.0",
    # numpy moved to base
]

[dependency-groups]
# Development dependencies (local-only, not published)
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]


[tool.uv]
concurrent-builds = 4
concurrent-downloads = 8
concurrent-installs = 4
